Cleaning up bad code